Controller JoinOk 메서드 커멘드 객체를 이용한 HTTP전송 정보 얻기.

--- a/SpringStudy/ex17/src/main/webapp/resources/html/login.html
+++ b/SpringStudy/ex17/src/main/webapp/resources/html/login.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>MemberLogin!!!</h1>
-	<form action="/ex17/memLogin" method="post">
+	<form action="/memLogin" method="post">
 		ID : <input type="text" name="memId">
 		PW : <input type="password" name="memPw">
 		<input type="submit" value="Login!">
